syntax = "proto3";

package sc.internal.services.identity.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "sc/external/common/api/v1/pagination.proto";
import "sc/external/common/api/v1/query.proto";
import "sc/external/services/identity/v1/player.proto";
import "sc/internal/services/identity/v1/account.proto";
import "sc/internal/services/identity/v1/query.proto";
import "sc/external/common/command/v1/types.proto";
import "sc/external/common/platform/v1/types.proto";
import "sc/external/common/types/v1/customization.proto";

service IdentityService {
  rpc QueryAccounts ( QueryAccountsRequest ) returns ( QueryAccountsResponse );
  rpc QueryAccountsHistory ( QueryAccountsHistoryRequest ) returns ( QueryAccountsHistoryResponse );
  rpc FulfillPlayers ( FulfillPlayersRequest ) returns ( FulfillPlayersResponse );
  rpc RenamePlayers ( RenamePlayersRequest ) returns ( RenamePlayersResponse );
  rpc RepairPlayers ( RepairPlayersRequest ) returns ( RepairPlayersResponse );
  rpc ResetPlayers ( ResetPlayersRequest ) returns ( ResetPlayersResponse );
  rpc ArchivePlayers ( ArchivePlayersRequest ) returns ( ArchivePlayersResponse );
  rpc QueryPlayers ( QueryPlayersRequest ) returns ( QueryPlayersResponse );
  rpc GetAccountBadges ( GetAccountBadgesRequest ) returns ( GetAccountBadgesResponse );
  rpc GetGameInventory ( GetGameInventoryRequest ) returns ( GetGameInventoryResponse );
  rpc GetEntitledKey ( GetEntitledKeyRequest ) returns ( GetEntitledKeyResponse );
  rpc SetEntitledKey ( SetEntitledKeyRequest ) returns ( SetEntitledKeyResponse );
  rpc RemoveEntitledKeys ( RemoveEntitledKeysRequest ) returns ( RemoveEntitledKeysResponse );
  rpc GetRepairLockedKey ( GetRepairLockedKeyRequest ) returns ( GetRepairLockedKeyResponse );
  rpc SetRepairLockedKey ( SetRepairLockedKeyRequest ) returns ( SetRepairLockedKeyResponse );
  rpc SaveCharacterCustomizations ( SaveCharacterCustomizationsRequest ) returns ( SaveCharacterCustomizationsResponse );
  rpc GetCharacterCustomizations ( GetCharacterCustomizationsRequest ) returns ( GetCharacterCustomizationsResponse );
}

message QueryAccountsRequest {
  Query query = 4;

  message Query {
    AccountFilter filter = 1;
    external.common.api.v1.PaginationArguments pagination = 2;
    external.common.api.v1.PaginationSort sort = 3;
  }
}

message QueryAccountsResponse {
  repeated Account results = 1;
  external.common.api.v1.PaginationInfo page_info = 2;
}

message QueryAccountsHistoryRequest {
  external.common.api.v1.Query query = 4;
}

message QueryAccountsHistoryResponse {
  repeated AccountHistory results = 1;
  external.common.api.v1.PaginationInfo page_info = 2;
}

message FulfillPlayersRequest {
  external.common.command.v1.CommandArguments arguments = 2;
  repeated FulfillPlayerCommand commands = 3;

  message FulfillPlayerCommand {
    string name = 1;
    uint32 account_id = 3;
  }
}

message FulfillPlayersResponse {
  repeated external.services.identity.v1.Player players = 1;
}

message RenamePlayersRequest {
  repeated RenamePlayerCommand commands = 1;

  message RenamePlayerCommand {
    string urn = 1;
    string name = 2;
  }
}

message RenamePlayersResponse {}

message RepairPlayersRequest {
  repeated RepairPlayerCommand commands = 1;

  message RepairPlayerCommand {
    oneof identifier {
      string urn = 1;
    }
  }
}

message RepairPlayersResponse {}

message ResetPlayersRequest {
  repeated ResetPlayerCommand commands = 1;

  message ResetPlayerCommand {
    oneof identifier {
      string urn = 1;
    }
  }
}

message ResetPlayersResponse {}

message ArchivePlayersRequest {
  repeated ArchivePlayerCommand commands = 1;

  message ArchivePlayerCommand {
    oneof identifier {
      string urn = 1;
    }
  }
}

message ArchivePlayersResponse {}

message QueryPlayersRequest {
  Query query = 4;

  message Query {
    PlayerFilter filter = 1;
    external.common.api.v1.PaginationArguments pagination = 2;
    external.common.api.v1.PaginationSort sort = 3;
  }
}

message QueryPlayersResponse {
  repeated external.services.identity.v1.Player results = 1;
  external.common.api.v1.PaginationInfo page_info = 2;
}

message GetGameInventoryRequest {
  int32 account_id = 1;
}

message GetGameInventoryResponse {
  external.common.platform.v1.PlatformGameInventoryData data = 1;
}

message GetAccountBadgesRequest {
  uint32 account_id = 1;
}

message GetAccountBadgesResponse {
  uint32 account_id = 1;
  repeated external.common.platform.v1.PlatformBadge badges = 2;
}

message GetEntitledKeyRequest {
  uint32 account_id = 1;
}

message GetEntitledKeyResponse {
  bool is_entitled = 1;
}

message SetEntitledKeyRequest {
  uint32 account_id = 1;
  bool is_entitled = 2;
  uint32 duration = 3;
}

message SetEntitledKeyResponse {}

message RemoveEntitledKeysRequest {
  repeated uint32 account_ids = 1;
}

message RemoveEntitledKeysResponse {}

message GetRepairLockedKeyRequest {
  uint32 account_id = 1;
}

message GetRepairLockedKeyResponse {
  bool is_locked = 1;
}

message SetRepairLockedKeyRequest {
  uint32 account_id = 1;
  bool is_locked = 2;
  uint32 duration = 3;
}

message SetRepairLockedKeyResponse {}

message SaveCharacterCustomizationsRequest {
  uint64 player_id = 1;
  external.common.types.v1.CharacterCustomization character_customizations = 2;
}

message SaveCharacterCustomizationsResponse {}

message GetCharacterCustomizationsRequest {
  uint64 player_id = 1;
}

message GetCharacterCustomizationsResponse {
  external.common.types.v1.CharacterCustomization character_customizations = 1;
}

